Add knowledge base structure and language support for Bangla
- Created main index for the knowledge base in `src/shared/knowledge/index.js`.
- Added comprehensive Bangla language knowledge module in `src/shared/knowledge/languages/bangla.js`, including verbs, pronouns, question words, adjectives, slang, phrases, negation, time & frequency, common places, relationship markers, and conversation topics.
- Implemented conversation pattern recognition in `src/shared/knowledge/patterns/conversation-patterns.js`, covering activity patterns, intent patterns, conversation flow patterns, topic transitions, relationship dynamics, urgency levels, and sentiment patterns.
- Developed semantic grouping for related concepts in `src/shared/knowledge/patterns/semantic-groups.js`, categorizing technology, business, social, education, problem-solving, emotional clusters, activity clusters, and context indicators.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -48,6 +48,11 @@
         "shared/config/tones.js",
         "shared/config/api.js",
         "shared/config/index.js",
+        "shared/knowledge/index.js",
+        "shared/knowledge/domains/technology.js",
+        "shared/knowledge/languages/bangla.js",
+        "shared/knowledge/patterns/conversation-patterns.js",
+        "shared/knowledge/patterns/semantic-groups.js",
         "shared/lib/logger.js",
         "shared/lib/dom-utils.js",
         "shared/lib/index.js",
@@ -59,6 +64,7 @@
         "entities/tone/model/Tone.js",
         "entities/tone/index.js",
         "features/context/model/SpeakerDetector.js",
+        "features/context/model/TopicAnalyzer.js",
         "features/context/model/ConversationAnalyzer.js",
         "features/context/model/ContextExtractor.js",
         "features/context/index.js",
