feat: Implement comprehensive improvements to Gracula extension
- Added quoted message and media detection for enhanced context understanding.
- Introduced semantic intent and emotional state detection to tailor AI responses.
- Developed user preference learning system to adapt to user styles over time.
- Created conversation summarization feature to manage long chats efficiently.
- Enhanced prompt building with detailed context analysis for better reply generation.
- Updated documentation to reflect all new features and improvements.
- Conducted thorough quality assurance to ensure backward compatibility and performance.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -66,8 +66,10 @@
         "features/context/model/SpeakerDetector.js",
         "features/context/model/TopicAnalyzer.js",
         "features/context/model/ConversationAnalyzer.js",
+        "features/context/model/ConversationSummarizer.js",
         "features/context/model/ContextExtractor.js",
         "features/context/index.js",
+        "features/preferences/model/PreferenceLearner.js",
         "widgets/floating-button/ui/FloatingButton.js",
         "widgets/floating-button/index.js",
         "widgets/modal/ui/Modal.js",
