feat: Implement UserProfileDetector for detecting user names from WhatsApp Web
- Added UserProfileDetector class to extract the current user's name from WhatsApp's UI.
- Implemented multiple detection strategies with caching and validation.
- Strategies include detection from chat messages, profile panel, and localStorage.
- Added comprehensive logging for debugging and tracking detection processes.

test: Create test suite for UserProfileDetector functionality

- Developed test HTML page to verify user identity detection and speaker recognition.
- Included simulated WhatsApp header for testing purposes.
- Implemented tests for user profile detection, speaker recognition, and caching mechanisms.
- Captured console output for better visibility during tests.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -63,6 +63,7 @@
         "entities/message/index.js",
         "entities/tone/model/Tone.js",
         "entities/tone/index.js",
+        "features/context/model/UserProfileDetector.js",
         "features/context/model/SpeakerDetector.js",
         "features/context/model/TopicAnalyzer.js",
         "features/context/model/ConversationAnalyzer.js",
