Implement context building approaches and testing framework for conversation management
- Added three context building strategies: Hierarchical, Sliding Window, and Smart Selection.
- Developed a comprehensive context quality test framework to evaluate the effectiveness of each approach.
- Created a real WhatsApp data testing script to extract and analyze actual conversation data.
- Implemented a mock reply generator to simulate AI responses based on context quality.
- Established a test runner to compare all three approaches and generate detailed reports.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Gracula - AI Reply Assistant",
-  "version": "2.0.3",
-  "description": "Context-aware AI-powered replies for messaging apps. Advanced speaker detection and conversation analysis.",
+  "version": "2.1.1",
+  "description": "Context-aware AI-powered replies with smart user detection, topic tracking, and quality validation.",
   "permissions": [
     "activeTab",
     "storage",
@@ -68,6 +68,7 @@
         "features/context/model/TopicAnalyzer.js",
         "features/context/model/ConversationAnalyzer.js",
         "features/context/model/ConversationSummarizer.js",
+        "features/context/model/SmartMessageSelector.js",
         "features/context/model/ContextExtractor.js",
         "features/context/index.js",
         "features/preferences/model/PreferenceLearner.js",
