Add autocomplete functionality with AI-powered text completion
- Integrate autocomplete dropdown and manager components into main app
- Add background handler for generating contextual autocompletions
- Implement smart completion logic that focuses on replying to the last message
- Support reply-to message detection and targeted response generation
- Add strict length limits and conversation-aware suggestion formatting
- Include autocomplete components in manifest and gitignore extension folder

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -82,6 +82,9 @@
         "widgets/context-viewer/index.js",
         "widgets/reply-list/ui/ReplyList.js",
         "widgets/reply-list/index.js",
+        "widgets/autocomplete/ui/AutocompleteDropdown.js",
+        "widgets/autocomplete/model/AutocompleteManager.js",
+        "widgets/autocomplete/index.js",
         "app/GraculaApp.js",
         "app/index.js"
       ],
