feat: Implement offline suggestion system and AI toggle for autocomplete
- Added offline suggestion capabilities in AutocompleteManager with pattern matching.
- Introduced AI configuration loading to enable/disable AI for suggestions.
- Enhanced common phrase completions for instant local suggestions without API calls.
- Implemented a response caching system to reduce API calls and improve performance.
- Added a "Use AI" toggle in ToneSelector to allow users to choose between local suggestions and API calls.
- Developed Voice Input Manager for recording and transcribing audio using ElevenLabs API.
- Created a dedicated offline suggestions database for context-aware responses.
- Improved user experience by providing instant suggestions and reducing reliance on API calls.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -53,9 +53,11 @@
         "shared/knowledge/languages/bangla.js",
         "shared/knowledge/patterns/conversation-patterns.js",
         "shared/knowledge/patterns/semantic-groups.js",
+        "shared/knowledge/offline-suggestions.js",
         "shared/lib/logger.js",
         "shared/lib/dom-utils.js",
         "shared/lib/index.js",
+        "shared/utils/ResponseCache.js",
         "entities/platform/model/Platform.js",
         "entities/platform/lib/detector.js",
         "entities/platform/index.js",
@@ -85,6 +87,8 @@
         "widgets/autocomplete/ui/AutocompleteDropdown.js",
         "widgets/autocomplete/model/AutocompleteManager.js",
         "widgets/autocomplete/index.js",
+        "widgets/voice-input/model/VoiceInputManager.js",
+        "widgets/voice-input/index.js",
         "app/GraculaApp.js",
         "app/index.js"
       ],
