--- a/src/manifest.json
+++ b/src/manifest.json
@@ -81,6 +81,8 @@
         "features/voice-transcription/model/CloudTranscriber.js",
         "features/voice-transcription/model/TranscriptionManager.js",
         "features/voice-transcription/index.js",
+        "features/global-voice-input/GlobalVoiceInputManager.js",
+        "features/global-voice-input/index.js",
         "widgets/voice-input/ui/VoiceButton.js",
         "widgets/voice-input/ui/RecordingIndicator.js",
         "widgets/voice-input/model/VoiceInputManager.js",
@@ -102,6 +104,39 @@
         "app/index.js"
       ],
       "css": ["styles.css"],
+      "run_at": "document_idle",
+      "all_frames": false
+    },
+    {
+      "matches": ["<all_urls>"],
+      "exclude_matches": [
+        "https://web.whatsapp.com/*",
+        "https://www.instagram.com/*",
+        "https://www.messenger.com/*",
+        "https://www.facebook.com/*",
+        "https://tinder.com/*",
+        "https://bumble.com/*",
+        "https://www.linkedin.com/*",
+        "https://twitter.com/*",
+        "https://x.com/*",
+        "https://discord.com/*",
+        "https://app.slack.com/*",
+        "https://*.slack.com/*",
+        "https://mail.google.com/*",
+        "https://web.telegram.org/*"
+      ],
+      "js": [
+        "shared/config/api.js",
+        "shared/config/voice-providers.js",
+        "features/voice-transcription/model/AudioRecorder.js",
+        "features/voice-transcription/model/WebSpeechRecognizer.js",
+        "features/voice-transcription/model/VoiceActivityDetector.js",
+        "features/voice-transcription/model/CloudTranscriber.js",
+        "features/voice-transcription/model/TranscriptionManager.js",
+        "features/voice-transcription/index.js",
+        "features/global-voice-input/GlobalVoiceInputManager.js",
+        "features/global-voice-input/index.js"
+      ],
       "run_at": "document_idle",
       "all_frames": false
     }
