feat: Implement global grammar fix functionality with UI integration and LanguageTool API support

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -100,6 +100,9 @@
         "widgets/autocomplete/ui/AutocompleteDropdown.js",
         "widgets/autocomplete/model/AutocompleteManager.js",
         "widgets/autocomplete/index.js",
+        "widgets/grammar-fix/ui/GrammarButton.js",
+        "widgets/grammar-fix/model/GrammarFixManager.js",
+        "widgets/grammar-fix/index.js",
         "app/GraculaApp.js",
         "app/index.js"
       ],
@@ -135,7 +138,9 @@
         "features/voice-transcription/model/TranscriptionManager.js",
         "features/voice-transcription/index.js",
         "features/global-voice-input/GlobalVoiceInputManager.js",
-        "features/global-voice-input/index.js"
+        "features/global-voice-input/index.js",
+        "features/global-grammar-fix/GlobalGrammarFixManager.js",
+        "features/global-grammar-fix/index.js"
       ],
       "run_at": "document_idle",
       "all_frames": false
