feat: Implement "Reply to Last Message" feature with system banner filtering
- Removed outdated voice integration test HTML file.
- Added new test results JSON to track last run status.
- Created comprehensive testing summary for the "Reply to Last Message" fix.
- Developed Playwright tests to ensure correct filtering of WhatsApp encryption banners.
- Introduced a master test runner to execute all test suites and report results.
- Added HTML simulation for manual testing of last message detection.
- Implemented regression tests to ensure existing features remain functional.
- Created unit tests for system banner filtering logic.
- Developed integration tests for the complete "Reply to Last Message" flow.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "description": "Gracula Chrome Extension - AI-powered messaging assistant",
   "scripts": {
-    "watch": "node watch-and-reload.js"
+    "watch": "node watch-and-reload.js",
+    "test": "node test/run-all-tests.js",
+    "test:banner-filter": "node test/test-system-banner-filter.js",
+    "test:integration": "node test/test-reply-last-message-integration.js",
+    "test:regressions": "node test/test-no-regressions.js",
+    "test:playwright": "playwright test",
+    "test:last-message": "playwright test test/playwright-last-message-test.spec.js",
+    "test:ui": "playwright test --ui"
   },
   "keywords": ["chrome-extension", "ai", "messaging"],
   "author": "Arafat",
