style: Add PhrasePredictor initialization with retry logic for improved reliability in AutocompleteManager

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -98,6 +98,7 @@
         "widgets/reply-list/ui/ReplyList.js",
         "widgets/reply-list/index.js",
         "widgets/autocomplete/ui/AutocompleteDropdown.js",
+        "widgets/autocomplete/model/PhrasePredictor.js",
         "widgets/autocomplete/model/AutocompleteManager.js",
         "widgets/autocomplete/index.js",
         "app/GraculaApp.js",
