Ghost Text Done Properly | Arafat

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -98,8 +98,10 @@
         "widgets/reply-list/ui/ReplyList.js",
         "widgets/reply-list/index.js",
         "widgets/autocomplete/ui/AutocompleteDropdown.js",
+        "widgets/autocomplete/ui/GhostTextOverlay.js",
         "widgets/autocomplete/model/PhrasePredictor.js",
         "widgets/autocomplete/model/AutocompleteManager.js",
+        "widgets/autocomplete/model/GhostTextController.js",
         "widgets/autocomplete/index.js",
         "app/GraculaApp.js",
         "app/index.js"
