Supabase setup for Gracula Extension
- Created README.md with architecture, data flow, and key features.
- Added detailed Supabase setup instructions including database schema, authentication, and API key configuration.
- Implemented Semantic Search utility for context retrieval based on past messages.
- Developed Embedding Service for generating and caching vector embeddings.
- Introduced Vector Memory manager for orchestrating embedding generation and storage.
- Established Vector Store for handling storage and retrieval of vectors in Supabase.
- Implemented caching mechanism for embeddings using IndexedDB.
- Created Supabase client for lightweight interactions with the Supabase API.
- Defined SQL schema for conversations, message embeddings, and conversation summaries with Row Level Security policies.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -59,6 +59,12 @@
         "shared/lib/dom-utils.js",
         "shared/lib/index.js",
         "shared/utils/ResponseCache.js",
+        "shared/lib/supabase/supabase-client.js",
+        "shared/lib/cache/embedding-cache.js",
+        "features/memory/model/EmbeddingService.js",
+        "features/memory/model/VectorStore.js",
+        "features/memory/model/VectorMemory.js",
+        "features/memory/lib/SemanticSearch.js",
         "entities/platform/model/Platform.js",
         "entities/platform/lib/detector.js",
         "entities/platform/index.js",
